--- a/url-shortener/package.json
+++ b/url-shortener/package.json
@@ -13,7 +13,7 @@
     "bcryptjs": "^3.0.3",
     "lucide-react": "^0.553.0",
     "next": "16.0.3",
-    "next-auth": "^5.0.0",
+    "next-auth": "5.0.0-beta.25",
     "qrcode.react": "^4.2.0",
     "react": "19.2.0",
     "react-dom": "19.2.0"
