--- a/url-shortener/package.json
+++ b/url-shortener/package.json
@@ -12,7 +12,7 @@
     "@supabase/supabase-js": "^2.81.1",
     "bcryptjs": "^3.0.3",
     "lucide-react": "^0.553.0",
-    "next": "16.0.3",
+    "next": "^15.0.0",
     "next-auth": "5.0.0-beta.25",
     "qrcode.react": "^4.2.0",
     "react": "19.2.0",
@@ -25,7 +25,7 @@
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
-    "eslint-config-next": "16.0.3",
+    "eslint-config-next": "^15.0.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
