--- a/url-shortener/package.json
+++ b/url-shortener/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.81.1",
+    "@types/jsonwebtoken": "^9.0.10",
     "bcryptjs": "^3.0.3",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.553.0",
     "next": "^15.0.0",
     "next-auth": "5.0.0-beta.25",
